--- a/HCXcodeTools/Info.plist
+++ b/HCXcodeTools/Info.plist
@@ -52,6 +52,14 @@
 					<key>XCSourceEditorCommandName</key>
 					<string>InitView</string>
 				</dict>
+				<dict>
+					<key>XCSourceEditorCommandClassName</key>
+					<string>$(PRODUCT_MODULE_NAME).SourceEditorCommand</string>
+					<key>XCSourceEditorCommandIdentifier</key>
+					<string>$(PRODUCT_BUNDLE_IDENTIFIER).SortImports</string>
+					<key>XCSourceEditorCommandName</key>
+					<string>SortImports</string>
+				</dict>
 			</array>
 			<key>XCSourceEditorExtensionPrincipalClass</key>
 			<string>$(PRODUCT_MODULE_NAME).SourceEditorExtension</string>
